Added RightToLeft support
Not tested yet

--- a/InputTextX/InputTextX.csproj
+++ b/InputTextX/InputTextX.csproj
@@ -88,7 +88,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="InputTextX.cs" />
-    <Compile Include="D:\GitHub\InputTextX\.\API\RainmeterAPI.cs" />
+    <Compile Include="..\API\RainmeterAPI.cs" />
     <Compile Include="Plugin.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +111,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir).\API\DllExporter.exe" "$(ConfigurationName)" "$(PlatformName)" "$(TargetDir)\" "$(TargetFileName)"</PostBuildEvent>
+    <PostBuildEvent>"$(ProjectDir)..\API\DllExporter.exe" "$(ConfigurationName)" "$(PlatformName)" "$(TargetDir)\" "$(TargetFileName)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
